--- a/layouts/partials/page_header.html
+++ b/layouts/partials/page_header.html
@@ -6,13 +6,13 @@
       <ul>
         {{ range .Site.Menus.main }}
             <li>
-              <a href="{{ .URL }}">{{ .Name }}</a>
+              <a href="{{ .URL }}"><span>{{ .Name }}</span></a>
               {{ if in ($.Scratch.Get "sections") .Name }}
                 <a href="{{ .URL }}index.xml" class="rss-link"><img src="/img/rss.svg" class="rss-icon" /></a>
               {{ end }}
             </li>
         {{ end }}
-        {{ with .Site.Author.aboutpage }}<li><a href="{{ . }}">About</a></li>{{ end }}
+        {{ with .Site.Author.aboutpage }}<li><a href="{{ . }}"><span>About</span></a></li>{{ end }}
       </ul>
     </div>
   </nav>
