--- a/static/css/weblog.css
+++ b/static/css/weblog.css
@@ -84,6 +84,10 @@ nav {
   text-align: center;
 }
 
+nav .menu {
+  margin-top: 15px;
+}
+
 nav ul {
   list-style-type: none;
   margin: 0 auto;
@@ -345,9 +349,10 @@ and (max-width: 780px) {
     text-align: center;
   }
 
-  .menu {
+  nav .menu {
     background-color: #fafafa;
     border-bottom: #f2f2f2 1px solid;
+    margin-top: 0;
   }
 
   nav ul {
@@ -360,8 +365,24 @@ and (max-width: 780px) {
     display: inline-block;
     float: none;
     margin: 0;
-    padding: 10px;
-    border-bottom: none;
+    padding: 0;
+    border-bottom: 1px solid transparent;
+  }
+
+  nav ul > li:hover {
+    border-bottom: 1px solid rgb(241,87,37);
+  }
+
+  nav ul > li > a {
+    padding: 0 10px;
+  }
+
+  nav ul > li > a > span {
+    padding: 10px 0;
+  }
+
+  nav ul > li > a:hover {
+    text-decoration: none;
   }
 
   nav ul > li .rss-link {
